k8s/00-namespace.yaml
# k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: padel-dev
  labels:
    env: development
