k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: padel-dev
  labels:
    app: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: padel-dev
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: tawanchai/padel-user-service:f9c0bf0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: court-service
  namespace: padel-dev
  labels:
    app: court-service
spec:
  type: ClusterIP
  selector:
    app: court-service
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: court-service
  namespace: padel-dev
  labels:
    app: court-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: court-service
  template:
    metadata:
      labels:
        app: court-service
    spec:
      containers:
        - name: court-service
          image: tawanchai/padel-court-service:f096b84
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---
# ---------------------------------------------------------------------------
# booking-service (Go)
# ---------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: padel-dev
  labels:
    app: booking-service
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: padel-dev
  labels:
    app: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: tawanchai/padel-booking-service:f096b84
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
